# admin_panel_for_notifications

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.production.yml  docker-compose.yml  env.exemple  env_loader.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  start_containers.py  start_project.py
app/: __main__.py  const.py
app/admin/: __init__.py  admin_app.py  app.py  config.py  middleware.py  utils.py
app/admin/actions/: __init__.py  notification_action.py  notification_actions.py
app/admin/views/: __init__.py  notification_view.py  user_view.py
app/celery/: celery_app.py  celery_worker.py
app/celery/celery_tasks/: notification.py
app/endpoints/: notification.py  notifications.py
app/enums/: locale.py
app/factory/: app_config.py  services.py
app/factory/telegram/: dispatcher.py  fastapi.py  i18n.py
app/models/config/: assets.py
app/models/config/env/: app.py  common.py  postgres.py  redis.py  server.py  sql_alchemy.py  telegram.py
app/models/dto/: notification.py  user.py
app/models/sql/: __init__.py  base.py  notification.py  user.py
app/models/sql/mixins/: timestamp.py
app/runners/: admin.py
app/services/: notification_service.py
app/services/crud/: __init__.py  notification.py  user.py
app/services/postgres/: context.py  uow.py
app/services/postgres/repositories/: general.py  notifications.py  users.py
app/services/redis/: repository.py
app/telegram/handlers/: __init__.py
app/telegram/handlers/extra/: lifespan.py  pm.py
app/telegram/handlers/main/: menu.py
app/telegram/keyboards/callback_data/: menu.py
app/telegram/middlewares/: user.py
app/utils/: yaml.py
app/utils/logging/: __init__.py  setup.py
assets/messages/en/: errors.ftl  menu.ftl
assets/messages/ru/: errors.ftl  menu.ftl
docker/filebeat/: Dockerfile  filebeat.yml
migrations/versions/: 4aa02f11f22b_initial.py  ba619963ab78_add_notifications_table.py  d68e5ff19445_initial_migration.py
nginx/: caller.example.conf
scripts/: start-admin.sh
tests/: README.md  __init__.py  conftest.py  test_admin_api.py  test_admin_app.py  test_admin_integration.py  test_admin_panel.py  test_admin_performance.py  test_notification_errors.py
tests/admin/: test_notification_actions.py
