[metadata]
name = aiogram_bot_template
version = 1.0
description = Aiogram 3.x bot template using PostgreSQL (asyncpg) with SQLAlchemy + alembic
author = wakaree
author_email = nullmatawasoradesu@gmail.com
license = MIT
readme = README.md

[options]
packages = find:
python_requires = >=3.12,<3.13

[options.packages.find]
include = app*
exclude = tests*, migrations*, docker*, logs*, assets*, scripts* 